k8s/overlays/prod/patch-deployment-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: energypredict-api
spec:
  template:
    spec:
      containers:
        - name: api
          resources:
            requests:
              cpu: 25m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
