k8s/overlays/prod/patch-deployment-rollout.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: energypredict-api
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
