k8s/overlays/prod/patch-deployment-secretproviderclass.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: energypredict-api
spec:
  template:
    spec:
      volumes:
        - name: secrets-store-inline
          csi:
            volumeAttributes:
              secretProviderClass: energypredict-kv-secrets-prod
