k8s/overlays/prod/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: energypredict-api
spec:
  rules:
    - host: api.energypredict.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: energypredict-api
                port:
                  number: 80
